force-app/main/default/objects/MHY__c/MHY__c.object-meta.xml
<CustomObject>
    <label>MHY</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MHY</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>