force-app/main/default/objects/MHY__c/fields/ATDTS_ActivationStatus__c.field-meta.xml
<CustomField>
    <fullName>ATDTS_ActivationStatus__c</fullName>
    <label>ATDTS_DeActivationStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>