force-app/main/default/objects/MHY__c/fields/ATDTS_DeviceId__c.field-meta.xml
<CustomField>
    <fullName>ATDTS_DeviceId__c</fullName>
    <label>ATDTS_DeviceId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>