force-app/main/default/objects/MHY__c/fields/ATDTS_DeviceName__c.field-meta.xml
<CustomField>
    <fullName>ATDTS_DeviceName__c</fullName>
    <label>ATDTS_DeviceName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>