force-app/main/default/objects/MHY__c/fields/Related_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_ID__c</fullName>
    <label>Related Case ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>